--- a/index.html
+++ b/index.html
@@ -27,6 +27,41 @@
 
     </div>
 </nav>
+<section class="hero">
+    <img src="assets/hero-bg.png" class="wave" alt="">
+
+    <div class="mic-wrapper">
+        <span class="badge">NEW</span>
+        <img src="assets/microphone.png" class="mic" alt="">
+    </div>
+
+    <h1>TechWave</h1>
+
+    <p class="subtitle">
+        Your daily dose of tech insights, productivity hacks, and personal growth
+    </p>
+
+    <div class="buttons">
+        <a href="#" class="spotify-btn">🎧 Listen On Spotify</a>
+        <a href="#" class="subscribe-btn-hero">✔ Subscribe</a>
+    </div>
+</section>
+
+<section class="about">
+    <h2>About The Podcast</h2>
+    <p>
+        TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+        We break down complex topics into digestible insights, explore productivity strategies
+        that actually work, and share stories of personal growth from industry leaders.
+    </p>
+    <p>
+        Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+    </p>
+</section>
+
+
+
+
 
 
 
