--- a/index.html
+++ b/index.html
@@ -58,9 +58,89 @@
         Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
     </p>
 </section>
+<section class="stats">
+    <div class="stats-inner">
+        <div class="stat">
+            <h3>150K+</h3>
+            <p>MONTHLY LISTENERS</p>
+        </div>
+        <div class="stat">
+            <h3>200+</h3>
+            <p>EPISODES PUBLISHED</p>
+        </div>
+        <div class="stat">
+            <h3>4.9<span>★</span></h3>
+            <p>AVERAGE RATING</p>
+        </div>
+        <div class="stat">
+            <h3>50+</h3>
+            <p>INDUSTRY EXPERTS</p>
+        </div>
+    </div>
+</section>
+<section class="why">
+    <h2 class="why-title">Why Choose TechWave</h2>
 
+    <div class="why-grid">
 
+        <div class="why-card tall">
+            <div class="why-icon">
+                <img src="assets/headphone.png" alt="">
+            </div>
+            <h3>Premium Audio Quality</h3>
+            <p>
+                Experience crystal-clear sound with professional-grade recording
+                equipment and expert audio engineering. Every episode is mastered
+                for optimal listening across all devices and platforms.
+            </p>
+        </div>
 
+        <div class="why-card wide">
+            <div class="why-icon">
+                <img src="assets/device.png" alt="">
+            </div>
+            <h3>Mobile Friendly</h3>
+            <p>
+                Listen on the go with seamless mobile experience and offline downloads.
+            </p>
+        </div>
+
+        <div class="why-card wide">
+            <div class="why-icon">
+                <img src="assets/location.png" alt="">
+            </div>
+            <h3>Global Community</h3>
+            <p>
+                Connect with tech enthusiasts from over 120 countries worldwide.
+            </p>
+        </div>
+
+        <div class="why-card long">
+            <div class="why-icon">
+                <img src="assets/zap-fast.png" alt="">
+            </div>
+            <h3>Exclusive Interviews</h3>
+            <p>
+                Get unprecedented access to industry titans, startup founders, and
+                tech visionaries. Our host secures exclusive conversations you won't
+                find anywhere else, diving deep into their journeys, failures, and
+                success strategies.
+            </p>
+        </div>
+
+        <div class="why-card small">
+            <div class="why-icon">
+                <img src="assets/resource.png" alt="">
+            </div>
+            <h3>Rich Resources</h3>
+            <p>
+                Access show notes, transcripts, and additional learning materials
+                for every episode.
+            </p>
+        </div>
+
+    </div>
+</section>
 
 
 
