--- a/index.html
+++ b/index.html
@@ -141,6 +141,59 @@
 
     </div>
 </section>
+<section class="featured">
+    <h2 class="featured-title">Featured Episodes</h2>
+
+    <div class="episode-grid">
+
+        <div class="episode-card">
+            <div class="episode-thumb">
+                <img src="assets/Rectangle 1 (2).png" alt="">
+                <span class="play-btn">▶</span>
+            </div>
+            <h3>The Future of AI in Everyday Life</h3>
+            <p>
+                Exploring how artificial intelligence is transforming our daily routines
+                and what to expect in the next decade.
+            </p>
+            <div class="episode-meta">
+                <span>🟢 42 min</span>
+            </div>
+        </div>
+
+        <div class="episode-card">
+            <div class="episode-thumb">
+                <img src="assets/Rectangle 1 (1).png" alt="">
+                <span class="play-btn">▶</span>
+            </div>
+            <h3>Building Better Habits for Remote Work</h3>
+            <p>
+                Practical strategies for staying productive and maintaining work-life
+                balance in a remote environment.
+            </p>
+            <div class="episode-meta">
+                <span>🟢 35 min</span>
+            </div>
+        </div>
+
+        <div class="episode-card">
+            <div class="episode-thumb">
+                <img src="assets/Rectangle 1.png" alt="">
+                <span class="play-btn">▶</span>
+            </div>
+            <h3>Career Growth in Tech: A Roadmap</h3>
+            <p>
+                Expert advice on navigating your tech career from junior developer to
+                senior leadership roles.
+            </p>
+            <div class="episode-meta">
+                <span>🟢 51 min</span>
+            </div>
+        </div>
+
+    </div>
+</section>
+
 
 
 
