--- a/index.html
+++ b/index.html
@@ -193,6 +193,33 @@
 
     </div>
 </section>
+<section class="host">
+    <h2 class="host-title">Meet The Host</h2>
+
+    <div class="host-card">
+        <div class="host-img">
+            <img src="assets/host.png" alt="Host">
+        </div>
+
+        <div class="host-content">
+            <h3>Alex Kumar</h3>
+            <p>
+                Tech entrepreneur, productivity expert, and lifelong learner. Alex has
+                been in the tech industry for over 10 years, working with startups and
+                Fortune 500 companies. Through TechWave, Alex shares insights from
+                industry leaders and practical advice for anyone looking to grow in tech.
+            </p>
+
+            <div class="host-socials">
+                <a href="#"><img src="assets/linkedin.png" alt=""></a>
+                <a href="#"><img src="assets/twitter.png" alt=""></a>
+                <a href="#"><img src="assets/instagram.png" alt=""></a>
+                <a href="#"><img src="assets/youtube.png" alt=""></a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 
