--- a/index.html
+++ b/index.html
@@ -219,11 +219,28 @@
         </div>
     </div>
 </section>
+<footer class="footer">
+    
+    
+    <div class="footer-inner">
 
+        <h2 class="footer-logo">
+            Tech<span>Wave</span>
+        </h2>
 
+        <div class="footer-socials">
+            <a href="#"><img src="assets/spotify.png" alt=""></a>
+            <a href="#"><img src="assets/apple-podcast.png" alt=""></a>
+            <a href="#"><img src="assets/youtube-podcast.png" alt=""></a>
+            <a href="#"><img src="assets/twitter.png" alt=""></a>
+        </div>
 
+        <p class="footer-copy">
+            © 2026 TechWave Podcast. All rights reserved.
+        </p>
 
-
+    </div>
+</footer>
 
 </body>
 </html>
